--- a/app.json
+++ b/app.json
@@ -9,6 +9,9 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/logo_nx.png"
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
